Fixed scrollbar isssue for multiple transaction types

--- a/src/modules/pos/validator/components/UnlockBalanceView/styles.css
+++ b/src/modules/pos/validator/components/UnlockBalanceView/styles.css
@@ -1,3 +1,3 @@
 .wrapper {
-  overflow: auto;
+  overflow-y: auto;
 }
